Refactor BVRService and update API endpoint for visualizzazione richiesta